<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">Mapzen</string>
    <string name="search_title">Search</string>
    <string name="results_title">Search Results</string>
    <string name="route_description">Turn Icon</string>
    <string name="route_resume_button">Resume</string>
    <string name="view_all">VIEW ALL</string>
    <string name="no_route_found">No Route Found</string>
    <string name="current_location">Current Location</string>
    <string name="generic_server_error">Server Error</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_message">Wait while loading</string>
    <string name="gps_dialog_title">GPS Disabled</string>
    <string name="gps_dialog_message">The GPS on your device is disabled. Would you like to enable it for improved location accuracy?</string>
    <string name="gps_positive_button">Yes</string>
    <string name="gps_negative_button">Dismiss</string>
    <string name="start">Start</string>
    <string name="view">View</string>
    <string name="overflow_menu">More</string>
    <string name="route_steps_menu_option">Step-by-step list</string>
    <string name="waiting">Waiting for location</string>
    <string name="recalculating">Recalculating</string>
    <string name="upload_traces">Upload GPS Traces</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="routing_to_text">To\u0020</string>
    <string name="search_hint_icon_spacer">"   "</string>
    <string name="osm_attribution">© OpenStreetMap</string>

    <!--Settings-->

    <string name="settings">Settings</string>
    <string name="submit_data">Submit data</string>
    <string name="settings_debug_mode">Debug Mode</string>
    <string name="settings_debug_mode_summary">This will keep application in debug mode and location will be stored</string>
    <string name="settings_debug_title">Debugging</string>
    <string name="settings_key_debug">checkbox_debug</string>
    <string name="settings_key_mapsource">edittext_mapsource</string>
    <string name="settings_default_mapsource">http://vector.dev.mapzen.com/osm/vtm</string>
    <string name="settings_mapsource_dialog_title">Configure Map Tile source</string>
    <string name="settings_mapsource">Configure Tile server</string>
    <string name="settings_mapsource_summary">Restart required! And possibly flushing caches.</string>
    <string name="settings_voice_navigation_key">checkbox_voice_navigation</string>
    <string name="settings_voice_navigation_summary">Enable voice navigation</string>
    <string name="settings_voice_navigation_title">Voice navigation</string>
    <string name="settings_key_enable_fixed_location">checkbox_preset_location</string>
    <string name="settings_enable_fixed_location_summary">Enable fixed preset location</string>
    <string name="settings_enable_fixed_location_title">Fixed location</string>
    <string name="settings_fixed_location_dialog_title">Set Fixed Location (lat, lng)</string>
    <string name="settings_fixed_location_default_value">40.7443, -73.9903</string>
    <string name="settings_fixed_location_key">edittext_fixed_location</string>
    <string name="settings_fixed_location_summary">Set fixed debug location</string>
    <string name="settings_fixed_location_title">Debug location</string>
    <string name="settings_mock_gpx_key">checkbox_mock_gpx</string>
    <string name="settings_mock_gpx_title">GPX trace mode</string>
    <string name="settings_mock_gpx_summary">Replay mock locations via GPX trace file</string>
    <string name="settings_mock_gpx_filename_default_value">lost.gpx</string>
    <string name="settings_mock_gpx_filename_key">edittext_mock_gpx</string>
    <string name="settings_mock_gpx_filename_summary">Copy file to root folder of external media (SD card)</string>
    <string name="settings_mock_gpx_filename_title">GPX file</string>
    <string name="settings_location_update_interval_key">settings_location_update_interval</string>
    <string name="settings_location_update_interval_title">Location update interval</string>
    <string name="settings_location_update_interval_summary">ms between location updates (restart required)</string>

    <!--Zoom Settings-->

    <string name="settings_zoom_title">Zoom</string>
    <string name="settings_zoom_walking_key">zoom_walking</string>
    <string name="settings_zoom_walking_title">Walking</string>
    <string name="settings_zoom_biking_key">zoom_biking</string>
    <string name="settings_zoom_biking_title">Biking</string>
    <string name="settings_zoom_driving_0to15_key">zoom_driving_0_to_15</string>
    <string name="settings_zoom_driving_0_to_15_title">Driving 0–15 Mph</string>
    <string name="settings_zoom_driving_15to25_key">zoom_driving_15_to_25</string>
    <string name="settings_zoom_driving_15_to_25_title">Driving 15–25 Mph</string>
    <string name="settings_zoom_driving_25to35_key">zoom_driving_25_to_35</string>
    <string name="settings_zoom_driving_25_to_35_title">Driving 25–35 Mph</string>
    <string name="settings_zoom_driving_35to50_key">zoom_driving_35_to_50</string>
    <string name="settings_zoom_driving_35_to_50_title">Driving 35–50 Mph</string>
    <string name="settings_zoom_driving_over50_key">zoom_driving_over_50</string>
    <string name="settings_zoom_driving_over_50_title">Driving 50+ Mph</string>

    <!--Advance Radius Settings-->

    <string name="settings_turn_title">Advance Radius</string>
    <string name="settings_turn_walking_key">turn_walking</string>
    <string name="settings_turn_walking_title">Walking</string>
    <string name="settings_turn_biking_key">turn_biking</string>
    <string name="settings_turn_biking_title">Biking</string>
    <string name="settings_turn_driving_0to15_key">turn_driving_0_to_15</string>
    <string name="settings_turn_driving_0_to_15_title">Driving 0–15 Mph</string>
    <string name="settings_turn_driving_15to25_key">turn_driving_15_to_25</string>
    <string name="settings_turn_driving_15_to_25_title">Driving 15–25 Mph</string>
    <string name="settings_turn_driving_25to35_key">turn_driving_25_to_35</string>
    <string name="settings_turn_driving_25_to_35_title">Driving 25–35 Mph</string>
    <string name="settings_turn_driving_35to50_key">turn_driving_35_to_50</string>
    <string name="settings_turn_driving_35_to_50_title">Driving 35–50 Mph</string>
    <string name="settings_turn_driving_over50_key">turn_driving_over_50</string>
    <string name="settings_turn_driving_over_50_title">Driving 50+ Mph</string>

    <string name="settings_speed_title">Advance Radius</string>
    <string name="settings_number_of_locations_for_average_speed_key">number_of_locations_for_average_speed</string>
    <string name="settings_number_of_locations_for_average_speed_title">Number of Location for average speed</string>

    <string name="toast_fixed_location_is_malformed">Your fixed location is malformed</string>
    <string name="logo_description">Mapzen Logo</string>
    <string name="osm_login">OpenStreetMap Login</string>
    <string name="osm_logout">OpenStreetMap Logout</string>
    <string name="osm_login_title">Please Authorize</string>
    <string name="osm_init_login">Log in with Open Street Map</string>
    <string name="osm_init_sign_up">Sign up with Open Street Map</string>
    <string name="osm_sign_up_url">https://www.openstreetmap.org/user/new</string>
    <string name="login_explanation">Sign up or log in with Open Street Map to get started.</string>
    <string name="motto">Start where you are.</string>
    <string name="login_error">Unable to log in. You can try to log in again by restarting the application.</string>

    <!--Debug Strings-->

    <string name="debug_current_location">Current Location</string>
    <string name="debug_snap_location">Snap Location</string>
    <string name="debug_closest_instruction">Closest Instruction</string>
    <string name="destination_preview">destination_preview</string>
    <string name="destination_preview_distance">destination_preview_distance</string>
    <string name="reverse">reverse</string>

    <string name="secret_phrase">yo!!!</string>

</resources>
