<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <group android:id="@+id/overflow_menu">

        <item
            android:id="@+id/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/phone_home"
            android:title="@string/submit_data" />

        <item
            android:id="@+id/upload_traces"
            android:title="@string/upload_traces" />

        <item
            android:id="@+id/login"
            android:title="@string/osm_login"
            android:showAsAction="never" />

        <item
            android:id="@+id/logout"
            android:title="@string/osm_logout"
            android:visible="false"
            android:showAsAction="never" />
    </group>

</menu>
