<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/settings"
          android:title="@string/settings"
          android:visible="false"
          android:showAsAction="never" />

    <item android:id="@+id/phone_home"
          android:title="@string/submit_data"
          android:visible="false"
          android:showAsAction="never" />

    <item android:id="@+id/upload_traces"
          android:title="@string/upload_traces"
          android:visible="false"
          android:showAsAction="never" />

    <item android:id="@+id/login"
          android:title="@string/osm_login"
          android:showAsAction="never" />

    <item android:id="@+id/logout"
          android:title="@string/osm_logout"
          android:visible="false"
          android:showAsAction="never" />

</menu>
